lib/cppparser/lexer.h
@@ -82,6 +82,7 @@ enum Type {
     Token_export,
     Token_extern,
     Token_false,
+    Token_final,
     Token_float,
     Token_for,
     Token_friend,
